# activealchemy

./: .gitignore  ChangeLog  Makefile  README.md  mise.local.toml  pyproject.toml  ruff.toml
activealchemy/: __init__.py  activerecord.py  config.py  engine.py
activealchemy/aio/: __init__.py  activerecord.py  engine.py
activealchemy/base/: __init__.py  engine.py  record.py
activealchemy/demo/: amodels.py  models.py
activealchemy/sync/: __init__.py  activerecord.py  engine.py
migrations/: 00001_init.sql
tests/: conftest.py  test_config.py
tests/async/: conftest.py  test_async_integration.py  test_async_select.py
tests/sync/: conftest.py  test_sync_engine.py  test_sync_integration.py
